Terminando seccion proyectos

--- a/index.html
+++ b/index.html
@@ -41,9 +41,27 @@
                             <div class="contenedor-slider">                                
                                 <div class="carousel">
                                   <div class="slider">
-                                    <section class="slide">Content section 1</section>
-                                    <section class="slide">Content section 2</section>
-                                    <section class="slide">Content section 3</section>
+                                    <section class="slide"> 
+                                        <div class="a">
+                                            <h2>                                            
+                                                <a href="https://amarantac.github.io/frontend1/">Página web proyecto HTML + CSS</a>                                   
+                                            </h2>                                           
+                                        </div>                                                                                                        
+                                    </section>
+                                    <section class="slide">
+                                        <div class="b">
+                                            <h2>                                            
+                                                <a href="http://www.pisostechosyparedes.com/">Página web Transversal</a>                                   
+                                            </h2>                                           
+                                        </div> 
+                                    </section>
+                                    <section class="slide">
+                                        <div class="c">
+                                            <h2>                                            
+                                                <a href="https://amarantac.github.io/Planta/#">Página web proyecto Javascript</a>                                   
+                                            </h2>                                           
+                                        </div>                                        
+                                    </section>
                                   </div>
                                   <div class="controls">
                                     <button class="next"><i class="fa-solid fa-angle-right"></i></button>
@@ -68,15 +86,12 @@
                                 <div>
                                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                                 </div>  
-                                <div>
-                                    <a href=""><i class="fa-brands fa-twitter"></i></a>
-                                </div> 
                                 <div><a href=""><i class="fa-regular fa-envelope"></i></a>
                                 </div> 
                             </div>                     
 
                             <div class="imagen">
-                                <img src="img/cel.gif">
+                                <img src="">
                                 <div class="titulo">
                                     <h1>CONTACTO</h1>
                                 </div>
