Agregando imagen a contactos

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             </div>                     
 
                             <div class="imagen">
-                                <img src="">
+                                <img src="img/cel.gif">
                                 <div class="titulo">
                                     <h1>CONTACTO</h1>
                                 </div>
