--- a/index.html
+++ b/index.html
@@ -69,9 +69,16 @@
                                   </div>
                                 </div>
                             </div> 
+                             
+                            <div class="mel1">
+                                <img src="img/mel.png" alt="gato">
+                            </div> 
                             <div class="titulo">
                                 <h1>PROYECTOS</h1>
-                            </div>         
+                            </div> 
+                            <div class="mel2">
+                                <img src="img/mel2.png" alt="gato">
+                            </div>       
                                                                        
                         </div>                        
                     </div>
