--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                                     <a href="https://github.com/AmarantaC"><i class="fa-brands fa-github-alt"></i></a>
                                 </div> 
                                 <div>
-                                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/lariverarosa/"><i class="fa-brands fa-instagram"></i></a>
                                 </div>  
-                                <div><a href=""><i class="fa-regular fa-envelope"></i></a>
+                                <div><a href="mailto:amarcitla@gmail.com"><i class="fa-regular fa-envelope"></i></a>
                                 </div> 
                             </div>                     
 
