"Corrigiendo acerca de mi"

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 y aqui estoy iniciando en el mundo de la tecnologia.</p> 
                                 <p>He aprendido a usar <b>HTML, CSS, Javascript, Git y Sass</b> tambien 
                                 manejo <b>Illustrator y Photoshop</b> ademas de otros programas de diseño.</p>
-                                <p>Actualmente estoy aprendiendo <b>UX Desing</b> y ampliando mi conocimiento en Javascript.</p>
+                                <p>Actualmente estoy aprendiendo <b>UX Design</b> y ampliando mi conocimiento en Javascript.</p>
                             </div>                                                                         
                         </div>                            
                     </div> 
