--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
                             
                             <div class="texto">                                           
                                 <p>Soy <strong> Amaranta de la Rosa </strong></p>
-                                <p>Estudie arquitectura pero despues de ejercer 13 años me di cuenta que me habia equivocado de carrera
-                                y aqui estoy iniciando en el mundo de la tecnologia.</p> 
-                                <p>He aprendido a usar <b>HTML, CSS, Javascript, Git y Sass</b> tambien 
-                                manejo <b>Illustrator y Photoshop</b> ademas de otros programas de diseño.</p>
-                                <p>Actualmente estoy aprendiendo <b>UX Design</b> y ampliando mi conocimiento en Javascript.</p>
+                                <p>Me considero una persona creativa y comprometida, siento una gran fascinación 
+                                por las posibilidades que tienen las herramientas tecnológicas y el diseño 
+                                para mejorar la calidad de vida y experiencias de las personas.
+                                </p> 
+                                <p>Me gusta trabajar en proyectos retadores y me interesa seguir participando 
+                                en trabajos que me permitan hacer uso de mis habilidades y conocimientos en
+                                <b>HTML, CSS, Javascript, Sass y Git</b> como Diseñadora y Desarrolladora Web.</p>
+                                <p>Actualmente estoy en proceso de certificación como <b>UX Designer</b> por Google.
+                                </p>
                             </div>                                                                         
                         </div>                            
                     </div> 
@@ -85,16 +89,19 @@
                     </div>
                     <!--Contacto-->
                     <div id="contacto">
-                        <div class="item"> 
-  
-                            <div class="redes">                                
-                                <div>
+                        <div class="item">   
+                            <div class="redes">  
+                                <div class="texto2">
+                                    <p> ¿Te interesa trabajar conmigo? </p>
+
+                                </div>                              
+                                <div class="red">
                                     <a href="https://github.com/AmarantaC"><i class="fa-brands fa-github-alt"></i></a>
                                 </div> 
-                                <div>
+                                <div class="red">
                                     <a href="https://www.instagram.com/lariverarosa/"><i class="fa-brands fa-instagram"></i></a>
-                                </div>  
-                                <div><a href="mailto:amarcitla@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+                                </div >  
+                                <div class="red"><a href="mailto:amarcitla@gmail.com"><i class="fa-regular fa-envelope"></i></a>
                                 </div> 
                             </div>                     
 
