--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
                                             </h2>                                           
                                         </div>                                        
                                     </section>
+                                    <section class="slide">
+                                        <div class="d">
+                                            <h2>                                            
+                                                <a href="https://amarantac.github.io/Planta/#">Proyecto Esoterico Javascript (En proceso)</a>                                   
+                                            </h2>                                           
+                                        </div>                                        
+                                    </section>
                                   </div>
                                   <div class="controls">
                                     <button class="next"><i class="fa-solid fa-angle-right"></i></button>
