--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
                                 </div >  
                                 <div class="red"><a href="mailto:amarcitla@gmail.com"><i class="fa-regular fa-envelope"></i></a>
                                 </div> 
+                                <div class="red">
+                                    <a href="https://www.linkedin.com/in/iam-amaranta-delarosa-designer/"><i class="fa-brands fa-linkedin"></i></a>
+                                </div> 
                             </div>                     
 
                             <div class="imagen">
