--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                     <section class="slide">
                                         <div class="b">
                                             <h2>                                            
-                                                <a href="http://www.pisostechosyparedes.com/">Página web Transversal</a>                                   
+                                                <a href="https://amarantac.github.io/transversal/">Página web Transversal</a>                                   
                                             </h2>                                           
                                         </div> 
                                     </section>
