--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                     <section class="slide">
                                         <div class="d">
                                             <h2>                                            
-                                                <a href="https://amarantac.github.io/entregaDelaRosa/">Proyecto Esoterico Javascript (En proceso)</a>                                   
+                                                <a href="https://amarantac.github.io/horoscopos/">Pagina web Horoscopos Javascript</a>                                   
                                             </h2>                                           
                                         </div>                                        
                                     </section>
