--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
     <script src="https://kit.fontawesome.com/19c2998225.js" crossorigin="anonymous"></script>         
-    <title>Document</title>
+    <title>Amaranta</title>
 </head>
 <body>
     <section class="portafolio">        
